# eda-assistant-mcp

./: CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  smithery.yaml
.github/workflows/: ci.yml
examples/: basic_usage.py
tests/: __init__.py
