[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.5.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.9.1",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "seaborn>=0.13.2",
]
